[package]
name = "example-bio-shapes"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
cf-design = { workspace = true }
mesh-io = { workspace = true }
mesh-types = { workspace = true }
nalgebra = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true
