[package]
name = "example-design-to-sim"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
cf-design = { workspace = true }
sim-core = { workspace = true }
sim-mjcf = { workspace = true }
sim-bevy = { workspace = true }
bevy = { workspace = true, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_state",
    "bevy_winit",
    "multi_threaded",
    "tonemapping_luts",
    "zstd_rust",
] }
mesh-io = { workspace = true }
mesh-types = { workspace = true }
nalgebra = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true
