[package]
name = "curve-types"
version = "0.7.0"
edition = "2024"
rust-version = "1.85"
authors = ["CortenForge Contributors"]
description = "Parametric curve types for CAD and geometric modeling"
license = "Apache-2.0"
repository = "https://github.com/cortenforge/cortenforge"
keywords = ["geometry", "curves", "bezier", "nurbs", "cad"]
categories = ["mathematics", "graphics", "science"]

[dependencies]
nalgebra = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
approx = "0.5"

[features]
default = []
serde = ["dep:serde", "nalgebra/serde-serialize"]

[lints]
workspace = true
