# mesh-geodesic - Geodesic distance computation for CortenForge
#
# Layer 0 crate: Zero Bevy dependencies

[package]
name = "mesh-geodesic"
description = "Geodesic (surface) distance computation using Dijkstra's algorithm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
mesh-types = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
